test/sema/positive/if09.impala
fn f() -> () {
    let x: int = if (true) {
        5
    } else {
        return()
    };
}
